--- a/yixian.html
+++ b/yixian.html
@@ -78,7 +78,7 @@
                         <p class="pt-3"></p>
                     </div>
                 </a>
-                <a href="http://114.115.144.103/PDAC" class="col-lg-3 col-md-6">
+                <a href="https://yiyu-zz21.github.io/risknew/#/pdac" class="col-lg-3 col-md-6">
                     <div class="single-feature text-center item-padding">
                         <img src="assets/images/feature1.png" alt="">
                         <h3>胰头癌早期复发</h3>
