--- a/dandao.html
+++ b/dandao.html
@@ -71,7 +71,7 @@
     <section class="feature-area section-padding">
         <div class="container">
             <div class="row">
-                <a href="http://114.115.144.103/DCC" class="col-lg-3 col-md-6">
+                <a href="https://yiyu-zz21.github.io/risknew/#/dcc" class="col-lg-3 col-md-6">
                     <div class="single-feature text-center item-padding">
                         <img src="assets/images/feature2.png" alt="">
                         <h3>远端胆管癌早期复发</h3>
